# rust_vsts

./: .gitignore  README.md
rs_distortion/: .gitignore  Cargo.toml  build.sh
rs_distortion/src/: lib.rs
rs_distortion/vst/Oxidize.vst/Contents/: Info.plist
rs_distortion/vst/Oxidize.vst/Contents/MacOS/: Oxidize
rs_synth/: Cargo.toml  build.sh
rs_synth/src/: adsr.rs  filter.rs  lib.rs  oscillator.rs
rs_synth/vst/Oscicrate.vst/Contents/: Info.plist
rs_synth/vst/Oscicrate.vst/Contents/MacOS/: Oscicrate
