[package]
name = "rs_distortion"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Jeffares <ryandjeffares@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.1"

[lib]
name = "rs_distortion"
crate-type = ["cdylib"]
